
0.02  2013-02-07
  - Improved documentation.
  - Improved tests.

0.01  2013-02-06
  - First release.