@@ -29,9 +29,9 @@ for my $name (qw(get_more query)) {
   monkey_patch __PACKAGE__, $name, sub {
     my $self = shift;
     my $cb = ref $_[-1] eq 'CODE' ? pop : undef;
-    my ($id, $bytes) = $self->_build($name, @_);
+    my ($id, $msg) = $self->_build($name, @_);
     warn "-- Operation $id ($name)\n" if DEBUG;
-    $self->_start($id, 1, $bytes, $cb);
+    $self->_start({id => $id, safe => 1, msg => $msg, cb => $cb});
   };
 }
 
@@ -42,7 +42,7 @@ for my $name (qw(delete insert update)) {
     my $cb = ref $_[-1] eq 'CODE' ? pop : undef;
 
     # Make sure both operations can be written together
-    my ($id, $bytes) = $self->_build($name, $ns, @_);
+    my ($id, $msg) = $self->_build($name, $ns, @_);
     $id = $self->_id;
     $ns =~ s/\..+$/\.\$cmd/;
     my $command = bson_doc
@@ -50,10 +50,10 @@ for my $name (qw(delete insert update)) {
       j            => $self->j ? bson_true : bson_false,
       w            => $self->w,
       wtimeout     => $self->wtimeout;
-    $bytes .= $self->protocol->build_query($id, $ns, {}, 0, -1, $command, {});
+    $msg .= $self->protocol->build_query($id, $ns, {}, 0, -1, $command, {});
 
     warn "-- Operation $id ($name)\n" if DEBUG;
-    $self->_start($id, 1, $bytes, $cb);
+    $self->_start({id => $id, safe => 1, msg => $msg, cb => $cb});
   };
 }
 
@@ -101,9 +101,9 @@ sub is_active { !!(scalar @{$_[0]{queue} || []} || $_[0]{current}) }
 sub kill_cursors {
   my $self = shift;
   my $cb = ref $_[-1] eq 'CODE' ? pop : undef;
-  my ($id, $bytes) = $self->_build('kill_cursors', @_);
+  my ($id, $msg) = $self->_build('kill_cursors', @_);
   warn "-- Unsafe operation $id (kill_cursors)\n" if DEBUG;
-  $self->_start($id, 0, $bytes, $cb);
+  $self->_start({id => $id, safe => 0, msg => $msg, cb => $cb});
 }
 
 sub _auth {
@@ -111,8 +111,8 @@ sub _auth {
   my ($db, $user, $pass) = @$auth;
 
   # No nonce value
-  return $self->_connected($credentials) if $err || !$reply->[5][0]{ok};
-  my $nonce = $reply->[5][0]{nonce};
+  return $self->_connected($credentials) if $err || !$reply->{docs}[0]{ok};
+  my $nonce = $reply->{docs}[0]{nonce};
 
   # Authenticate
   my $key = md5_sum $nonce . $user . md5_sum "${user}:mongo:${pass}";
@@ -138,7 +138,7 @@ sub _cleanup {
   # Clean up all operations
   my $queue = delete $self->{queue} || [];
   unshift @$queue, $self->{current} if $self->{current};
-  $self->_finish(undef, $_->[2], 'Premature connection close') for @$queue;
+  $self->_finish(undef, $_->{cb}, 'Premature connection close') for @$queue;
 }
 
 sub _close {
@@ -152,9 +152,9 @@ sub _command {
 
   # Skip the queue and run command right away
   my $id = $self->_id;
-  my $bytes
+  my $msg
     = $self->protocol->build_query($id, "$db.\$cmd", {}, 0, -1, $command, {});
-  unshift @{$self->{queue}}, [$id, 1, $cb, $bytes];
+  unshift @{$self->{queue}}, {id => $id, safe => 1, cb => $cb, msg => $msg};
   warn "-- Fast operation $id (query)\n" if DEBUG;
   $self->_write;
 }
@@ -197,13 +197,13 @@ sub _error {
   my $current = delete $self->{current};
   $current //= shift @{$self->{queue}} if $err;
   return $err ? $self->emit(error => $err) : undef unless $current;
-  $self->_finish(undef, $current->[2], $err || 'Premature connection close');
+  $self->_finish(undef, $current->{cb}, $err || 'Premature connection close');
 }
 
 sub _finish {
   my ($self, $reply, $cb, $err) = @_;
-  $err ||= $reply->[5][0]{'$err'}
-    if $reply && $reply->[3] == 0 && @{$reply->[5]};
+  my $docs = $reply ? $reply->{docs} : undef;
+  $err ||= $docs->[0]{'$err'} if $docs && $reply->{cursor} == 0 && @$docs;
   $self->$cb($err, $reply);
 }
 
@@ -216,9 +216,9 @@ sub _id {
 
 sub _loop { $_[0]{nb} ? Mojo::IOLoop->singleton : $_[0]->ioloop }
 
-sub _op {
-  my ($self, $id, $safe, $bytes, $cb) = @_;
-  push @{$self->{queue} ||= []}, [$id, $safe, $cb, $bytes];
+sub _queue {
+  my ($self, $op) = @_;
+  push @{$self->{queue} ||= []}, $op;
   if   ($self->{connection}) { $self->_write }
   else                       { $self->_connect }
 }
@@ -228,18 +228,18 @@ sub _read {
 
   $self->{buffer} .= $chunk;
   while (my $reply = $self->protocol->parse_reply(\$self->{buffer})) {
-    warn "-- Client <<< Server ($reply->[1])\n" if DEBUG;
-    next unless $reply->[1] == $self->{current}[0];
-    $self->_finish($reply, (delete $self->{current})->[2]);
+    warn "-- Client <<< Server ($reply->{to})\n" if DEBUG;
+    next unless $reply->{to} == $self->{current}{id};
+    $self->_finish($reply, (delete $self->{current})->{cb});
   }
   $self->_write;
 }
 
 sub _start {
-  my ($self, $id, $safe, $bytes, $cb) = @_;
+  my ($self, $op) = @_;
 
   # Non-blocking
-  if ($cb) {
+  if ($op->{cb}) {
 
     # Start non-blocking
     unless ($self->{nb}) {
@@ -247,7 +247,7 @@ sub _start {
       $self->_cleanup;
       $self->{nb}++;
     }
-    return $self->_op($id, $safe, $bytes, $cb);
+    return $self->_queue($op);
   }
 
   # Start blocking
@@ -257,12 +257,11 @@ sub _start {
     delete $self->{nb};
   }
   my ($err, $reply);
-  $self->_op(
-    ($id, $safe, $bytes) => sub {
-      (my $self, $err, $reply) = @_;
-      $self->ioloop->stop;
-    }
-  );
+  $op->{cb} = sub {
+    (my $self, $err, $reply) = @_;
+    $self->ioloop->stop;
+  };
+  $self->_queue($op);
 
   # Start event loop
   $self->ioloop->start;
@@ -280,14 +279,14 @@ sub _write {
   return unless my $stream = $self->_loop->stream($self->{connection});
   return unless my $current = $self->{current} = shift @{$self->{queue}};
 
-  warn "-- Client >>> Server ($current->[0])\n" if DEBUG;
-  $stream->write(pop @$current);
+  warn "-- Client >>> Server ($current->{id})\n" if DEBUG;
+  $stream->write(delete $current->{msg});
 
   # Unsafe operations are done when they are written
-  return if $current->[1];
+  return if $current->{safe};
   weaken $self;
   $stream->write(
-    '' => sub { $self->_finish(undef, delete($self->{current})->[2]) });
+    '' => sub { $self->_finish(undef, delete($self->{current})->{cb}) });
 }
 
 1;
