@@ -5,40 +5,40 @@ use Mango::Protocol;
 
 my $p = Mango::Protocol->new;
 
-# Build empty update
+# Build minimal update
 is $p->build_update(1, 'foo', {}, {}, {}),
     "\x26\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd1\x07\x00\x00\x00\x00"
   . "\x00\x00\x66\x6f\x6f\x00\x00\x00\x00\x00\x05\x00\x00\x00\x00\x05\x00\x00"
-  . "\x00\x00", 'empty update';
+  . "\x00\x00", 'minimal update';
 
-# Build empty insert
+# Build minimal insert
 is $p->build_insert(1, 'foo', {}, {}),
   "\x1d\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd2\x07\x00\x00\x00\x00"
-  . "\x00\x00\x66\x6f\x6f\x00\x05\x00\x00\x00\x00", 'empty insert';
+  . "\x00\x00\x66\x6f\x6f\x00\x05\x00\x00\x00\x00", 'minimal insert';
 
-# Build empty query
+# Build minimal query
 is $p->build_query(1, 'foo', {}, 0, 10, {}, {}),
     "\x2a\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd4\x07\x00\x00\x00\x00"
   . "\x00\x00\x66\x6f\x6f\x00\x00\x00\x00\x00\x0a\x00\x00\x00\x05\x00\x00\x00"
-  . "\x00\x05\x00\x00\x00\x00", 'empty query';
+  . "\x00\x05\x00\x00\x00\x00", 'minimal query';
 
-# Build empty get_more
+# Build minimal get_more
 is $p->build_get_more(1, 'foo', 10, 1),
   "\x24\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd5\x07\x00\x00\x00\x00"
   . "\x00\x00\x66\x6f\x6f\x00\x0a\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00",
-  'empty get_more';
+  'minimal get_more';
 
-# Build empty delete
+# Build minimal delete
 is $p->build_delete(1, 'foo', {}, {}),
   "\x21\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd6\x07\x00\x00\x00\x00"
   . "\x00\x00\x66\x6f\x6f\x00\x00\x00\x00\x00\x05\x00\x00\x00\x00",
-  'empty delete';
+  'minimal delete';
 
-# Build empty kill_cursors
+# Build minimal kill_cursors
 is $p->build_kill_cursors(1, 1),
   "\x20\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00\xd7\x07\x00\x00\x00\x00"
   . "\x00\x00\x01\x00\x00\x00\x01\x00\x00\x00\x00\x00\x00\x00",
-  'empty kill_cursors';
+  'minimal kill_cursors';
 
 # Parse full reply with leftovers
 my $buffer
@@ -49,10 +49,14 @@ my $buffer
   . "\x00\x00\x00\x00\x00\x00\xf0\x3f\x00\x51";
 my $reply = $p->parse_reply(\$buffer);
 is $buffer, "\x51", 'right leftovers';
-my $nonce = [
-  305769, 3, {await_capable => 1, query_failure => 0, cursor_not_found => 0},
-  0, 0, [{nonce => '3295e5cd5eef2500', ok => 1}]
-];
+my $nonce = {
+  id     => 305769,
+  to     => 3,
+  flags  => {await_capable => 1, query_failure => 0, cursor_not_found => 0},
+  cursor => 0,
+  from   => 0,
+  docs => [{nonce => '3295e5cd5eef2500', ok => 1}]
+};
 is_deeply $reply, $nonce, 'right reply';
 
 # Parse partial reply
